--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="logo">CineHub</div>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Movies</li>
+                <li><a>Home</a></li>
+             <a>  <li>Movies</li></a>
                 <li>Genres</li>
                 <li>Trailers</li>
                 <li>Coming Soon</li>
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
