--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">CineHub</div>
         <nav>
             <ul>
-                <li><a>Home</a></li>
+                <li><a href="#">Home</a></li>
              <a>  <li>Movies</li></a>
                 <li>Genres</li>
                 <li>Trailers</li>
@@ -187,4 +187,5 @@
 
 </body>
 </html>
+
 
