--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <header>
         <div class="logo">CineHub</div>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-             <a>  <li>Movies</li></a>
-                <li>Genres</li>
-                <li>Trailers</li>
-                <li>Coming Soon</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="movies.html">Movies</a></li>
+    <li><a href="genres.html">Genres</a></li>
+    <li><a href="trailers.html">Trailers</a></li>
+    <li><a href="coming-soon.html">Coming Soon</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+</ul>
+
         </nav>
         <div class="search-bar">
             <input type="text" placeholder="Search movies...">
@@ -187,5 +188,6 @@
 
 </body>
 </html>
+
 
 
